--- a/index.html
+++ b/index.html
@@ -38,7 +38,62 @@
       </div>
     </div>
   </section>
-  <section id="skills"></section>
+  <section id="skills">
+    <h1>Skills</h1>
+    <h2>Skills & Attritubes</h2>
+    <p>Detail</p>
+    <div class="skillset">
+      <div class="skillset__left">
+        <h3 class="skillset__title"></h3>
+        <div class="skill">
+          <div class="skill_description">
+            <span>Ruby</span>
+            <span>99%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill_value"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill_description">
+            <span>Ruby on Rails</span>
+            <span>99%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill_value"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill_description">
+            <span>SQL</span>
+            <span>99%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill_value"></div>
+          </div>
+        </div>
+      </div>
+      <div class="skillset__right">
+        <div class="tools">
+          <h3 class="skillset__tools">Tools</h3>
+          <ul class="tools__list">
+            <li><span>Visual Studio Code</span></li>
+            <li><span>..</span></li>
+            <li><span>..</span></li>
+            <li><span>..</span></li>
+            <li><span>..</span></li>
+          </ul>
+        </div>
+        <div class="etc">
+          <h3 class="skillset__etc">Etc</h3>
+          <ul class="etc__list">
+            <li><span>Git</span></li>
+            <li><span></span></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
   <section id="work"></section>
   <section id="testimotials"></section>
   <section id="contact"></section>
