--- a/index.html
+++ b/index.html
@@ -94,7 +94,49 @@
       </div>
     </div>
   </section>
-  <section id="work"></section>
+  <section id="work">
+    <h1>My Work</h1>
+    <h3>projects</h3>
+    <div class="work__categories">
+      <button class="category">ALL<span class="category__count">1</span></button>
+      <button class="category">Back-end<span class="category__count">1</span></button>
+      <button class="category">Front-end<span class="category__count">1</span></button>
+    </div>
+    <div class="work_projects">
+      <div class="project">
+        <a href="https://github.com/dev-kim-dh/task-manager" class="project" target="blank"></a>
+        <img class="project__image" src="imgs/projects/task-manager.png" alt="Task-Manager">
+        <div class="project__description">
+          <h3>Task-Manager</h3>
+          <span>Stacks</span>
+        </div>
+      </div>
+      <div class="project">
+        <a href="https://github.com/dev-kim-dh/task-manager" class="project" target="blank"></a>
+        <img class="project__image" src="imgs/projects/task-manager.png" alt="Task-Manager">
+        <div class="project__description">
+          <h3>Project2</h3>
+          <span>Stacks</span>
+        </div>
+      </div>
+      <div class="project">
+        <a href="https://github.com/dev-kim-dh/task-manager" class="project" target="blank"></a>
+        <img class="project__image" src="imgs/projects/task-manager.png" alt="Task-Manager">
+        <div class="project__description">
+          <h3>Project3</h3>
+          <span>Stacks</span>
+        </div>
+      </div>
+      <div class="project">
+        <a href="https://github.com/dev-kim-dh/task-manager" class="project" target="blank"></a>
+        <img class="project__image" src="imgs/projects/task-manager.png" alt="Task-Manager">
+        <div class="project__description">
+          <h3>Project4</h3>
+          <span>Stacks</span>
+        </div>
+      </div>
+    </div>
+  </section>
   <section id="testimotials"></section>
   <section id="contact"></section>
 </body>
