--- a/index.html
+++ b/index.html
@@ -137,7 +137,14 @@
       </div>
     </div>
   </section>
-  <section id="testimotials"></section>
-  <section id="contact"></section>
+  <section id="contact">
+    <h1 class="contact__title">Contact</h1>
+    <h3 class="contact__email">dev.kimduho@gmail.com</h3>
+    <div class="contact__links">
+      <a href="https://github.com/k-duho" target="_blank">
+        <i class="fa-brands fa-github"></i>
+      </a>
+    </div>
+  </section>
 </body>
 </html>
