--- a/index.html
+++ b/index.html
@@ -14,7 +14,21 @@
 </head>
 <body>
   <section id="home">
-    
+    <nav id="navbar">
+      <div class="navbar__logo">
+        <i class="fa-solid fa-otter"></i>
+        <a href="#">k-duho</a>
+      </div>
+      <div class="navbar__menu">
+        <ul class="navbar__menu">
+          <li class="navbar__menu__item">Home</li>
+          <li class="navbar__menu__item">About</li>
+          <li class="navbar__menu__item">Skills</li>
+          <li class="navbar__menu__item">My work</li>
+          <li class="navbar__menu__item">Contact</li>
+        </ul>
+      </div>
+    </nav>
   </section>
   <section id="about">
     <h1>About me</h1>
