--- a/index.html
+++ b/index.html
@@ -13,22 +13,30 @@
   <title>My Portfolio</title>
 </head>
 <body>
+  <nav id="navbar">
+    <div class="navbar__logo">
+      <i class="fa-solid fa-otter"></i>
+      <a href="#">k-duho</a>
+    </div>
+    <div class="navbar__menu">
+      <ul class="navbar__menu">
+        <li class="navbar__menu__item">Home</li>
+        <li class="navbar__menu__item">About</li>
+        <li class="navbar__menu__item">Skills</li>
+        <li class="navbar__menu__item">My work</li>
+        <li class="navbar__menu__item">Contact</li>
+      </ul>
+    </div>
+  </nav>
   <section id="home">
-    <nav id="navbar">
-      <div class="navbar__logo">
-        <i class="fa-solid fa-otter"></i>
-        <a href="#">k-duho</a>
-      </div>
-      <div class="navbar__menu">
-        <ul class="navbar__menu">
-          <li class="navbar__menu__item">Home</li>
-          <li class="navbar__menu__item">About</li>
-          <li class="navbar__menu__item">Skills</li>
-          <li class="navbar__menu__item">My work</li>
-          <li class="navbar__menu__item">Contact</li>
-        </ul>
-      </div>
-    </nav>
+    <img src="imgs/avatar.png" alt="Profile photo" class="home__avatar">
+    <h1 class="home__title">
+      Hello,<br />I'm Web Developer
+    </h1>
+    <h2 class="home__description">
+      detail ~~
+    </h2>
+    <button class="home__contact">Contact Me</button>
   </section>
   <section id="about">
     <h1>About me</h1>
