--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </h2>
     <button class="home__contact">Contact Me</button>
   </section>
-  <section id="about">
+  <section id="about" class="section">
     <h1>About me</h1>
     <p>
       write description
@@ -47,21 +47,44 @@
     <div class="about__majors">
       <div class="major">
         <div class="major__icon">
+          <i class="fa-brands fa-html5"></i>
         </div>
-        <div class="major__title">
-        </div>
-        <div class="major__description"></div>
+          <h3 class="major__title">Front-end</h3>
+          <p class="major__description">HTML, CSS, JavaScript, React</p>
       </div>
-      <div class="jobs">
-        <div class="job">
-          <img src="/imgs/job__logo-froide.png" alt="" class="job__logo">
+      <div class="major">
+        <div class="major__icon">
+          <i class="fa-solid fa-hard-drive"></i>
+        </div>
+        <h3 class="major__title">Back-end</h3>
+        <p class="major__description">Ruby, Ruby on Rails</p>
+      </div>
+      <div class="major">
+        <div class="major__icon">
+          <i class="fa-brands fa-dev"></i>
+        </div>
+        <h3 class="major__title">Others</h3>
+        <p class="major__description">MySQL, AWS, Git</p>
+      </div>
+    </div>
+    <div class="about__jobs">
+      <div class="job">
+        <img src="/imgs/job__logo-bubble.png" alt="" class="job__logo">
+        <div class="job__description">
           <p class="job__name">株式会社フロイデ</p>
-          <p class="job_period">2019.03 ~ 2022.10</p>
+          <p class="job__period">2019.03 ~ 2022.10</p>
+        </div>
+      </div>
+      <div class="job">
+        <img src="/imgs/job__logo-bubble.png" alt="" class="job__logo">
+        <div class="job__description">
+          <p class="job__name">株式会社OOOO</p>
+          <p class="job__period">2022.12 ~ </p>
         </div>
       </div>
     </div>
   </section>
-  <section id="skills">
+  <section id="skills" class="section">
     <h1>Skills</h1>
     <h2>Skills & Attritubes</h2>
     <p>Detail</p>
@@ -117,7 +140,7 @@
       </div>
     </div>
   </section>
-  <section id="work">
+  <section id="work" class="section">
     <h1>My Work</h1>
     <h3>projects</h3>
     <div class="work__categories">
@@ -160,7 +183,7 @@
       </div>
     </div>
   </section>
-  <section id="contact">
+  <section id="contact" class="section">
     <h1 class="contact__title">Contact</h1>
     <h3 class="contact__email">dev.kimduho@gmail.com</h3>
     <div class="contact__links">
